<resources>
    <string name="app_name">PropertyConsultancy</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in">Sign In</string>
    <string name="new_here_create_an_account">New here? Create an account</string>
    <string name="app_logo_description">App Logo</string>
    <string name="voice_input_description">Voice Input</string>
    <string name="apt_suite_hint">Apt, Suite, etc. (Optional)</string>
    <string name="google_maps_key">AIzaSyB9-x0y8WH5I6hl1Ls4INqY0SHWnnwMRjM</string>
</resources>